[package]
name = "ronin"
version = "0.0.0"
publish = false
authors = ["Asteria <asteria@syvita.org>"]
edition = "2021"

[dependencies]
figment = { version = "0.10.6", features = ["env", "toml", "json"] }
num_cpus = "1.13.1"
redis = "0.21.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
blockstack-core = {  git = "https://github.com/syvita/stacks" }
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
anyhow = "1.0.52"